# learn-FastAPI-authorization

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt  requirements.txt
app/: database.py  email.py  main.py  models.py
app/auth/: constants.py  dependencies.py  router.py  services.py
app/tasks/: crud.py  models.py  routes.py
